embed mural video and fix mobile nav z-index bug

--- a/assets/scss/partials/_nav.scss
+++ b/assets/scss/partials/_nav.scss
@@ -135,6 +135,7 @@ span.nav-label {
 		position: fixed;
 		top: 0;
 		width: 100%;
+		z-index: 300;
 
 		.mobile-link {
 			display: inline-block;
